# vibe-vesting

./: .copilot.md  .env.example  .gitignore  AUTO_TRADER_FIXES_COMPLETE.md  BACKTEST_FRAMEWORK_SUMMARY.md  CLAUDE.md  CRITICAL_FIXES_SUMMARY.md  CRYPTO_TRADING_GUIDE.md  DELIVERY_SUMMARY.md  IMMEDIATE_ACTIONS_CRISIS_MODE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.txt  OPTIMIZATION_REPORT.md  PAIRS_TRADING_GUIDE.md  PHASE1_CHANGES.md  PROFIT_OPTIMIZATION.md  PROFIT_OPTIMIZATION_QUICKSTART.md  PROFIT_OPTIMIZER_FIXES.md  QUICK_FIX_SUMMARY.md  QUICK_START.md  QUICK_START_CRYPTO.md  README.md  RECOMMENDED_IMPROVEMENTS.md  RISK_INTEGRATION_GUIDE.md  RISK_SYSTEM_SUMMARY.md  STRATEGIC_ANALYSIS_VIX_CRISIS_20260213.md  STRATEGY_IMPROVEMENTS.md  VIX_REGIME_QUICK_REFERENCE.md  pyproject.toml  requirements.txt  test_profit_optimizer.py
api/: server.py
backtest/: engine.py  metrics.py  runner.py  validator.py
config/: cash_management.yaml  config.yaml
data/: alpaca_data_client.py  polygon_client.py  storage.py
docs/: ALPACA_SHORTING_OPTIONS_GUIDE.md  BACKTEST_QUICK_START.md  BRACKET_ORDER_FIX.md  CODE_CHANGES_BRACKET_FIX.md  volatility_breakout_strategy.md
examples/: alpaca_advanced_examples.py
execution/: alpaca_client.py  cash_manager.py  order_manager.py  position_tracker.py
frontend/: package-lock.json  package.json  tailwind.config.js
monitoring/: __init__.py  alerting.py  health_monitor.py  logger.py  risk_dashboard.py
risk/: README.md  __init__.py  adaptive_stops.py  circuit_breakers.py  correlation_manager.py  dynamic_sizing.py  kelly_sizing.py  portfolio_construction.py  portfolio_risk.py  position_sizing.py  profit_optimizer.py  strategy_optimizer_config.py  stress_test.py  var_calculator.py
scripts/: analyze_capital_utilization.py  analyze_signals.py  auto_trader.py  auto_trader_daemon.py  run_backtest.py  (+21 more)
(+28 files in other folders)
